# matrix-reg

./: Cargo.toml  README.md
src/: .env.example  main.rs
static/: functions.js  index.html
static/css/: googleNunito.css  style.css
